@@ -1,3 +1,7 @@
+2016-08-25  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-url-at-point): Refactor.
+
 2016-08-18  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m.el (w3m-image-viewer): Make it defcustom.
